tests/NormalTests/paczka1/small_fuzzy/68688875.err
Error in line 1: DbJ4DEL5 S758 84,8
Error in line 2: A74 S758 46,2
Error in line 4: A74 A312 58,3
